--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="video-container">
         <video id="background-video" autoplay muted playsinline>
             <!-- Здесь можно заменить src на ссылку на ваше видео -->
-            <source src="https://assets.mixkit.co/videos/preview/mixkit-sunset-over-a-lake-1486-large.mp4" type="video/mp4">
+            <source src="mp4.mp4" type="video/mp4">
             Ваш браузер не поддерживает видео элемент.
         </video>
         <div class="video-overlay"></div>
